@@ -23,9 +23,9 @@
 class CLHelp 
 {
 public:
-	static QString help();
+	static QString help(bool html = false);
 
 protected:
 	static QString formatText(QString s, int col);
-	static QString formatHelp(QString parameter, QString help);
+	static QString formatHelp(QString parameter, QString help, bool html = false);
 };
